<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.myutils</groupId>
	<artifactId>getlogs</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<properties>
		<!--installdir>c:\GCTI\lib</installdir-->
		<installdir>../install</installdir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.10.0</version>
		</dependency>		
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>value</artifactId>
			<version>2.10.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>builder</artifactId>
			<version>2.10.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.23.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.23.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.23.1</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt</artifactId>
			<version>1.9.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.6.0</version>
		</dependency>

		<dependency>
			<groupId>dnsjava</groupId>
			<artifactId>dnsjava</artifactId>
			<version>3.5.3</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>jide-oss</artifactId>
			<version>3.7.14</version>
		</dependency>
		<dependency>
			<groupId>net.i2p.crypto</groupId>
			<artifactId>eddsa</artifactId>
			<version>0.3.0</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.15.1</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.github.lgooddatepicker</groupId>
			<artifactId>LGoodDatePicker</artifactId>
			<version>11.2.1</version>
		</dependency>
		<dependency>
			<groupId>com.mycompany</groupId>
			<artifactId>Utils</artifactId>
			<version>1.0</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.myutils</groupId>
			<artifactId>logbrowser</artifactId>
			<version>1.0</version>
			<type>jar</type>
		</dependency>
	
 </dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.myutils</groupId>
				<artifactId>logbrowser</artifactId>
				<version>1.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>2.1.0</version>
				<configuration>
					<showConsoleWindow>false</showConsoleWindow>
					<assembleDirectory>${installdir}</assembleDirectory>
					<useWildcardClassPath>true</useWildcardClassPath>
					<repositoryLayout>flat</repositoryLayout>
					<repositoryName>lib</repositoryName>
					<tempDirectory>tmp</tempDirectory>
					<preAssembleDirectory>bin</preAssembleDirectory>
					<programs>
						<program>
							<mainClass>com.myutils.getlogs.GetLogs</mainClass>
							<id>getlogs</id>
						</program>
					</programs>
				</configuration>

			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<debug>true</debug>
				</configuration>
			</plugin>
		</plugins>
		<finalName>${project.artifactId}-${project.version}.0</finalName>
	</build>
	<repositories>
		<repository>
			<id>unknown-jars-temp-repo</id>
			<name>A temporary repository created by NetBeans for libraries and
				jars it could not identify. Please replace the dependencies in
				this repository with correct ones and delete this repository.</name>
			<url>file:${project.basedir}/lib</url>
		</repository>
	</repositories>
</project>
